--- a/styles.css
+++ b/styles.css
@@ -951,9 +951,10 @@
             }
             
             .cs-section {
-                padding: 50px 20px;
+                padding: 50px 20px 0px 20px;
+                margin-bottom: 0;
             }
-            
+
             .cs-section h2 {
                 font-size: 26px;
                 margin-bottom: 20px;
