--- a/styles.css
+++ b/styles.css
@@ -1626,3 +1626,10 @@
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
+#minyan .minyan-section,
+#minyan .minyan-reflection {
+    max-width: 820px;
+    margin-left: auto;
+    margin-right: auto;
+}
