--- a/styles.css
+++ b/styles.css
@@ -1626,10 +1626,15 @@
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
+/* fixes padding at the bottom of minyan page */
 #minyan .minyan-section,
 #minyan .minyan-reflection {
     max-width: 820px;
     margin-left: auto;
     margin-right: auto;
+}
+/* adds padding to top cards in mobile for eachh work page */
+.cs-hero,
+.minyan-hero {
+    margin-top: 40px;
 }
